Added product flavour for isiolo

--- a/build.gradle
+++ b/build.gradle
@@ -239,5 +239,9 @@ android {
 		livinggoods_demo {
 			applicationId = 'org.livinggoods.tech.sha.demo'
 		}
+
+		livinggoods_isiolo {
+			applicationId = 'org.livinggoods.tech.sha.isiolo'
+		}
 	}
 }
