--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ def getVersionCode = {
 }
 
 def getVersionName = {
-  System.env.TRAVIS_TAG ?: 'SNAPSHOT'
+  System.env.TRAVIS_TAG ?: 'v0.4.33'
 }
 
 android {
@@ -177,81 +177,6 @@ android {
       simprintsModuleId = 'simprints.app'
       simprintsUserId = 'test@simprints.app'
     }
-    medicmobiledemo {
-      applicationId = 'org.medicmobile.webapp.mobile.medicmobiledemo'
-    }
-
-    bracuganda {
-      applicationId = 'org.medicmobile.webapp.mobile.bracuganda'
-    }
-    cic_guatemala {
-      applicationId = 'org.medicmobile.webapp.mobile.cic_guatemala'
-    }
-    ebpp_indonesia {
-      applicationId = 'org.medicmobile.webapp.mobile.ebpp_indonesia'
-    }
-    hope_through_health {
-      applicationId = 'org.medicmobile.webapp.mobile.hope_through_health'
-    }
-    livinggoods {
-      applicationId = 'org.medicmobile.webapp.mobile.livinggoods'
-    }
-    livinggoodskenya {
-      applicationId = 'org.medicmobile.webapp.mobile.livinggoodskenya'
-    }
-    livinggoods_assisted_networks {
-      applicationId = 'org.medicmobile.webapp.mobile.livinggoods_assisted_networks'
-    }
-    livinggoods_innovation_ke {
-      applicationId = 'org.medicmobile.webapp.mobile.livinggoods_innovation_ke'
-    }
-    livinggoods_innovation_ke_supervisor {
-      applicationId = 'org.medicmobile.webapp.mobile.livinggoods_innovation_ke_supervisor'
-    }
-    livinggoods_innovation_ke_hivst {
-      applicationId = 'org.medicmobile.webapp.mobile.livinggoods_innovation_ke_hivst'
-    }
-    moh_kenya_siaya_white {
-      applicationId = 'org.medicmobile.webapp.mobile.moh_kenya_siaya'
-    }
-    moh_kenya_siaya_red {
-      applicationId = 'org.medicmobile.webapp.mobile.moh_kenya_siaya_red'
-    }
-    moh_kenya_siaya_green {
-      applicationId = 'org.medicmobile.webapp.mobile.moh_kenya_siaya_green'
-    }
-    moh_kenya_siaya_black {
-      applicationId = 'org.medicmobile.webapp.mobile.moh_kenya_siaya_black'
-    }
-    moh_mali {
-      applicationId = 'org.medicmobile.webapp.mobile.moh_mali'
-    }
-    moh_zanzibar_training {
-      applicationId = 'org.medicmobile.webapp.mobile.moh_zanzibar_training'
-    }
-    moh_zanzibar {
-      applicationId = 'org.medicmobile.webapp.mobile.moh_zanzibar'
-    }
-    musomali {
-      applicationId = 'org.medicmobile.webapp.mobile.musomali'
-    }
-    pih_malawi {
-      applicationId = 'org.medicmobile.webapp.mobile.pih_malawi'
-    }
-    pih_malawi_supervisor {
-      applicationId = 'org.medicmobile.webapp.mobile.pih_malawi_supervisor'
-    }
-    simprints {
-      applicationId = 'org.medicmobile.webapp.mobile.simprints'
-
-      simprintsApiKey = 'f4c47c4e-d6ee-444f-b16e-22a4761b1f3c'
-      simprintsModuleId = 'simprints.app'
-      simprintsUserId = 'test@simprints.app'
-    }
-    vhw_burundi {
-      applicationId = 'org.medicmobile.webapp.mobile.vhw_burundi'
-    }
-
     livinggoods_ug {
       applicationId = 'org.livinggoods.smarthealth.ug'
     }
